Исправлена ошибка http 405 при logout

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,10 @@
                             <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'logout' %}">Выйти</a>
+                            <a class="nav-link" href="#" onclick="document.getElementById('logout-form').submit(); return false;">Выйти</a>
+                                <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: none;">
+                                    {% csrf_token %}
+                                </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
